src/assets/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/*
There are two ways to add custom CSS to Tailwind:
- To all layers with * {}
- With the layer directive (there are 3 layers: base, components, utilities)

## Base layer
If you want to add custom CSS styles to specific HTML elements,
add those styles to the base layer.

Example: if you want to style all H2 elements you use the base layer.

##Components layer
If you want to add custom CSS styles to our more complicated
classes, then add those styles to the components layer.

Example: card, button...

##Utilities layer
For css features you like to use in your project that the tailwind doesn't
include utitilies for by deafult.

*/

@layer components {
    .card {
        @apply flex items-center justify-center;
        width: 150px;
        height: 150px;
        background-color: #f1f1f1;
        border-radius: 8px;
        border: 0.7px solid #eee;
        box-shadow: 0 4px 10px -1px rgba(0, 0, 0, 0.1),
        0 2px 6px -2px rgba(0, 0, 0, 0.2);
    }

    .grid-container {
        display: grid;
        grid-template-columns: repeat(4, minmax(0, 1fr));
        grid-template-rows: repeat(24, minmax(0, 1fr));
        gap: 0.5rem; /* Adjust gap as needed */
    
        /* Apply border to all grid items to create grid lines */
        > * {
          border: 1px solid #d1d5db; /* Adjust border color as needed */
        }
      }
}

